--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -70,7 +70,7 @@ general {
     gaps_in = 1
     gaps_out = 2
 
-    border_size = 1 
+    border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -110,21 +110,51 @@ decoration {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
     enabled = true
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    # Curves
+    bezier = expressiveFastSpatial, 0.42, 1.67, 0.21, 0.90
+    bezier = expressiveSlowSpatial, 0.39, 1.29, 0.35, 0.98
+    bezier = expressiveDefaultSpatial, 0.38, 1.21, 0.22, 1.00
+    bezier = emphasizedDecel, 0.05, 0.7, 0.1, 1
+    bezier = emphasizedAccel, 0.3, 0, 0.8, 0.15
+    bezier = standardDecel, 0, 0, 0, 1
+    bezier = menu_decel, 0.1, 1, 0, 1
+    bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
+    # Configs
+    # windows
+    animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
+    animation = windowsOut, 1, 2, emphasizedDecel, popin 90%
+    animation = windowsMove, 1, 3, emphasizedDecel, slide
+    animation = border, 1, 10, emphasizedDecel
+    # layers
+    animation = layersIn, 1, 2.7, emphasizedDecel, popin 93%
+    animation = layersOut, 1, 2.4, menu_accel, popin 94%
+    # fade
+    animation = fadeLayersIn, 1, 0.5, menu_decel
+    animation = fadeLayersOut, 1, 2.7, menu_accel
+    # workspaces
+    animation = workspaces, 1, 7, menu_decel, slide
+    ## specialWorkspace
+    animation = specialWorkspaceIn, 1, 2.8, emphasizedDecel, slidevert
+    animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
 }
+
+# https://wiki.hyprland.org/Configuring/Variables/#animations
+# animations {
+#     enabled = true
+# 
+#     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
+# 
+#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+# 
+#     animation = windows, 1, 7, myBezier
+#     animation = windowsOut, 1, 7, default, popin 80%
+#     animation = border, 1, 10, default
+#     animation = borderangle, 1, 8, default
+#     animation = fade, 1, 7, default
+#     animation = workspaces, 1, 6, default
+# }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
