Add screenrecording capabilities.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,21 +140,6 @@ animations {
     animation = specialWorkspaceOut, 1, 1.2, emphasizedAccel, slidevert
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-# animations {
-#     enabled = true
-# 
-#     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-# 
-#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-# 
-#     animation = windows, 1, 7, myBezier
-#     animation = windowsOut, 1, 7, default, popin 80%
-#     animation = border, 1, 10, default
-#     animation = borderangle, 1, 8, default
-#     animation = fade, 1, 7, default
-#     animation = workspaces, 1, 6, default
-# }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
@@ -229,6 +214,10 @@ bind = $mainMod SHIFT, L, exec, hyprlock
 
 # Keyboard binding for taking screenshots
 bind = ,Print, exec, ~/.config/hypr/scripts/screenshot.sh
+
+# Keyboard binding for starting and stopping screen recording
+bind = SHIFT,Print, exec, ~/.config/hypr/scripts/start_screenrecording.sh
+bind = CONTROLSHIFT,Print, exec, ~/.config/hypr/scripts/stop_screenrecording.sh
 
 # Keyboard bindings for brightness and volume control
 bind = ,XF86MonBrightnessUp, exec, brightnessctl set 10%+
