Change catppuccin flavor to mocha.

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -8,7 +8,7 @@
 
 background {
     monitor =
-    path = $HOME/wallpaper/sundown-over-water.jpg
+    path = $HOME/wallpaper/horizon.jpg
 }
 
 input-field {
