--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/wallpaper/sundown-over-water.jpg
-wallpaper = ,~/wallpaper/sundown-over-water.jpg
+preload = ~/wallpaper/horizon.jpg
+wallpaper = ,~/wallpaper/horizon.jpg
