--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -185,10 +185,8 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = true
-}
+# https://wiki.hypr.land/Configuring/Gestures/
+gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
@@ -207,6 +205,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Switch between internal display (eDP-1) and external display (HDMI-A-1)
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/switch_displays_internal_external.sh
+
+# Mirror external display (HDMI-A-1)
+bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "HDMI-A-1,1920x1080,auto,1, mirror,eDP-1"
 
 # Lock screen using hyprlock
 bind = $mainMod, L, exec, systemctl suspend
