--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -207,7 +207,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/switch_displays_internal_external.sh
 
 # Mirror external display (HDMI-A-1)
-bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "HDMI-A-1,1920x1080,auto,1, mirror,eDP-1"
+bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "DP-2,2560x1440@59.95Hz,auto,1, mirror,eDP-1"
 
 # Lock screen using hyprlock
 bind = $mainMod, L, exec, systemctl suspend
