--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -200,6 +200,12 @@ device {
 ### KEYBINDINGSS ###
 ####################
 
+binds {
+  allow_workspace_cycles = true
+}
+
+bind = SUPER, Tab, workspace, previous
+
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
@@ -210,8 +216,7 @@ bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/switch_displays_internal_
 bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "DP-2,2560x1440@59.95Hz,auto,1, mirror,eDP-1"
 
 # Lock screen using hyprlock
-bind = $mainMod, L, exec, systemctl suspend
-bind = $mainMod SHIFT, L, exec, hyprlock
+bind = $mainMod, L, exec, hyprlock
 
 # Keyboard binding for taking screenshots
 bind = ,Print, exec, ~/.config/hypr/scripts/screenshot.sh
