--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -56,7 +56,7 @@ env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 cursor {
-    no_hardware_cursors = true
+    no_hardware_cursors = false
 }
 
 #####################
