--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -185,14 +185,15 @@ input {
     }
 }
 
+
 # https://wiki.hypr.land/Configuring/Gestures/
 gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = microsoft-microsoft-ergonomic-mouse
+    sensitivity=-0.6
 }
 
 
@@ -213,13 +214,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/switch_displays_internal_external.sh
 
 # Mirror external display (HDMI-A-1)
-bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "DP-2,2560x1440@59.95Hz,auto,1, mirror,eDP-1"
+bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "DP-2,highres,auto,1, mirror,eDP-1"
 
 # Lock screen using hyprlock
 bind = $mainMod, L, exec, hyprlock
 
 # Keyboard binding for taking screenshots
 bind = ,Print, exec, ~/.config/hypr/scripts/screenshot.sh
+bind = $mainMod, Print, exec, grim - | wl-copy
 
 # Keyboard binding for starting and stopping screen recording
 bind = SHIFT,Print, exec, ~/.config/hypr/scripts/start_screenrecording.sh
