Improve monitor switching scripts and update neovim config + some regular maintenance.

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -33,6 +33,7 @@ exec-once = hypridle
 exec-once = nm-applet --indicator & 
 exec-once = waybar & hyprpaper & swaync
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = blueman-applet
 
 
 #############################
@@ -52,11 +53,16 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = GDK_BACKEND,wayland,x11,*
 env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_QPA_PLATFORM,wayland;xcb
+env = QT_QPA_PLATFORMTHEME,qt5ct
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 cursor {
     no_hardware_cursors = false
+}
+
+debug {
+  disable_logs = false
 }
 
 #####################
@@ -73,7 +79,7 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgb(180,190,254) rgb(250,179,135) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -210,11 +216,14 @@ bind = SUPER, Tab, workspace, previous
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+# Keyboard binding for toggling notification panel
+bind = $mainMod, N, exec, swaync-client -t
+
 # Switch between internal display (eDP-1) and external display (HDMI-A-1)
 bind = $mainMod SHIFT, P, exec, ~/.config/hypr/scripts/switch_displays_internal_external.sh
 
-# Mirror external display (HDMI-A-1)
-bind = $mainMod SHIFT, M, exec, hyprctl keyword monitor "DP-2,highres,auto,1, mirror,eDP-1"
+# Mirror external display
+bind = $mainMod SHIFT, M, exec, ~/.config/hypr/scripts/mirror_to_second_monitor.sh
 
 # Lock screen using hyprlock
 bind = $mainMod, L, exec, hyprlock
@@ -300,4 +309,8 @@ bindm = $mainMod, mouse:273, resizewindow
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrule {
+  name = windowrule-1
+  suppress_event = maximize
+  match:class = .*
+}
