--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -8,7 +8,7 @@
 
 background {
     monitor =
-    path = $HOME/wallpaper/horizon.jpg
+    path = ~/Pictures/wallpapers/moon-beach.png
 }
 
 input-field {
