--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/wallpaper/horizon.jpg
-wallpaper = ,~/wallpaper/horizon.jpg
+splash = false
+wallpaper {
+  monitor =
+  path = ~/Pictures/wallpapers/moon-beach.png
+  fit_mode = cover
+}
