--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,7 +5,13 @@
     // Choose the order of the modules
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["cpu", "idle_inhibitor", "memory"],
-    "modules-right": ["pulseaudio", "network", "temperature", "backlight", "battery", "clock", "tray"],
+    "modules-right": ["pulseaudio", "network", "bluetooth", "temperature", "backlight", "battery", "clock", "tray"],
+
+    "bluetooth": {
+       "format": " {status}",
+       "format-connected":  " {device_alias}",
+       "format-connected-battery": " {device_alias} {device_battery_percentage}%",
+    },
 
     "wlr/workspaces": {
          "disable-scroll": true,
@@ -18,7 +24,7 @@
     "tray": {
 /*        "icon-size": 21,*/
         "icon-size": 15,
-        "spacing": 10
+        "spacing": 10,
     },
     "clock": {
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
@@ -47,19 +53,15 @@
         // "scroll-step": 1, // %, can be a float
 //        "format": "{volume}% {icon} {format_source}",
         "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
-        "format-muted": " {format_source}",
+        "format-muted": " {format_source}",
 //        "format-source": "{volume}% ",
 //        "format-source-muted": "",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
             "phone": "",
             "portable": "",
             "car": "",
-            "default": ["", "", ""]
+            "default": ["󰕿", "󰖀", "󰕾"]
         },
         "on-click": "pavucontrol"
     },
